# maimai_ai_gen

./: .gitignore  AGENTS.md  README.md  config.yaml  debug.py  main.py  parse_maidata.py  pyproject.toml  run.sh  session-ses_0a5c.md  skills-lock.json  test.sh
doc/: Notations of simai.md  history.md  token化设计.md  张量格式.md  数据量和模型参数概况.md  训练输出说明.md
doc/历史文档，无参考价值/: history.md  old_当前问题总结.md
src/: audio_features.py  cache_all.py  chart.py  chart_cache.py  chart_metrics.py  check_rotation.py  config.py  constrained_decode.py  content_metrics.py  dataset.py  full_check.py  generation_metrics.py  infer.py  maidata_parser.py  mel_cache.py  mert_cache.py  model.py  music_data.py  overfit_one.py  overfit_songs.py  overfit_window.py  tensor_roundtrip.py  tokenizer.py  train.py
