[project]
name = "maimai"
version = "0.1.0"
description = "maimai 整曲谱面生成"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchcodec>=0.3.0",
    "numpy>=2.2.0",
    "tqdm>=4.68.4",
    "pyyaml>=6.0.3",
    "transformers>=5.13.1",
    "rich>=15.0.0",
]
